# sample-web-app

./: README.md  sample-web-app.cabal  start-server.sh
html/: index.html  sample.js
src/: Main.hs
