cabal-version:       2.4

name:                sample-web-app
version:             0.1.0.0
author:              Ben Selfridge
maintainer:          benselfridge@galois.com
extra-source-files:  CHANGELOG.md

executable sample-web-app
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       aeson >= 1.4,
                       base ^>=4.11.1.0,
                       http-types,
                       mtl,
                       random >= 1.1,
                       scotty >= 0.11,
                       text >= 1.2.3,
                       transformers
  hs-source-dirs:      src
  default-language:    Haskell2010
